--- a/Styles.css
+++ b/Styles.css
@@ -76,10 +76,12 @@ nav a:hover {
 }
 
 /* Sección Zonas */
-.zonas {
-  padding: 3rem 2rem;
-  background-color: white;
-  text-align: center;
+.zona img {
+  width: 100%;
+  height: 150px;
+  object-fit: cover;
+  border-radius: 10px;
+  margin-bottom: 1rem;
 }
 
 .zonas h2 {
